// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login renders showing errors 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFF",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#1745D5",
        "fontSize": 23,
        "fontWeight": "600",
        "marginBottom": 8,
        "marginTop": 16,
        "textAlign": "left",
      }
    }
  >
    Making Sense RN seed
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#9FA7BC",
        "fontSize": 17,
        "fontWeight": "400",
        "letterSpacing": 0.2,
        "marginBottom": 0,
      }
    }
  >
    Please login to your account
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#C21E5D",
        "fontSize": 13,
        "fontWeight": "400",
        "marginTop": 8,
      }
    }
  >
    Oops! Invalid email or password
  </Text>
  <View
    enabled={true}
    keyboardVerticalOffset={0}
    onLayout={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 0,
          "borderColor": "#ddd",
          "borderRadius": 2,
          "borderWidth": 1,
          "elevation": 1,
          "marginTop": 10,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomWidth": 1,
            "borderColor": "#ddd",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 5,
            "position": "relative",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          >
            EMAIL:
          </Text>
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            onChangeText={[Function]}
            placeholder="user@domain.com"
            secureTextEntry={false}
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            value="dgeslin@makingsense.com"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomWidth": 1,
            "borderColor": "#ddd",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 5,
            "position": "relative",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          >
            PASSWORD:
          </Text>
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            onChangeText={[Function]}
            placeholder="Enter your password..."
            secureTextEntry={true}
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            value="password"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomWidth": 1,
            "borderColor": "#ddd",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 5,
            "position": "relative",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#48BBEC",
              "borderColor": "#48BBEC",
              "borderRadius": 5,
              "borderWidth": 1,
              "flex": 1,
              "height": 60,
              "justifyContent": "center",
              "marginLeft": 5,
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignSelf": "center",
                "color": "#fff",
                "fontSize": 16,
                "fontWeight": "600",
                "paddingBottom": 5,
                "paddingTop": 5,
              }
            }
          >
             Login 
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Login renders without crashing 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFF",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#1745D5",
        "fontSize": 23,
        "fontWeight": "600",
        "marginBottom": 8,
        "marginTop": 16,
        "textAlign": "left",
      }
    }
  >
    Making Sense RN seed
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#9FA7BC",
        "fontSize": 17,
        "fontWeight": "400",
        "letterSpacing": 0.2,
        "marginBottom": 0,
      }
    }
  >
    Please login to your account
  </Text>
  <View
    enabled={true}
    keyboardVerticalOffset={0}
    onLayout={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 0,
          "borderColor": "#ddd",
          "borderRadius": 2,
          "borderWidth": 1,
          "elevation": 1,
          "marginTop": 10,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomWidth": 1,
            "borderColor": "#ddd",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 5,
            "position": "relative",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          >
            EMAIL:
          </Text>
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            onChangeText={[Function]}
            placeholder="user@domain.com"
            secureTextEntry={false}
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            value="dgeslin@makingsense.com"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomWidth": 1,
            "borderColor": "#ddd",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 5,
            "position": "relative",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          >
            PASSWORD:
          </Text>
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            onChangeText={[Function]}
            placeholder="Enter your password..."
            secureTextEntry={true}
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            value="password"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomWidth": 1,
            "borderColor": "#ddd",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 5,
            "position": "relative",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#48BBEC",
              "borderColor": "#48BBEC",
              "borderRadius": 5,
              "borderWidth": 1,
              "flex": 1,
              "height": 60,
              "justifyContent": "center",
              "marginLeft": 5,
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignSelf": "center",
                "color": "#fff",
                "fontSize": 16,
                "fontWeight": "600",
                "paddingBottom": 5,
                "paddingTop": 5,
              }
            }
          >
             Login 
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Login renders without crashing on Android 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFF",
      "flex": 1,
      "padding": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#1745D5",
        "fontSize": 23,
        "fontWeight": "600",
        "marginBottom": 8,
        "marginTop": 16,
        "textAlign": "left",
      }
    }
  >
    Making Sense RN seed
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#9FA7BC",
        "fontSize": 17,
        "fontWeight": "400",
        "letterSpacing": 0.2,
        "marginBottom": 0,
      }
    }
  >
    Please login to your account
  </Text>
  <View
    enabled={true}
    keyboardVerticalOffset={NaN}
    onLayout={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "#FFF",
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "borderBottomWidth": 0,
          "borderColor": "#ddd",
          "borderRadius": 2,
          "borderWidth": 1,
          "elevation": 1,
          "marginTop": 10,
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 2,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomWidth": 1,
            "borderColor": "#ddd",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 5,
            "position": "relative",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          >
            EMAIL:
          </Text>
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            onChangeText={[Function]}
            placeholder="user@domain.com"
            secureTextEntry={false}
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            value="dgeslin@makingsense.com"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomWidth": 1,
            "borderColor": "#ddd",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 5,
            "position": "relative",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 1,
                "fontSize": 18,
                "paddingLeft": 20,
              }
            }
          >
            PASSWORD:
          </Text>
          <TextInput
            allowFontScaling={true}
            autoCorrect={false}
            onChangeText={[Function]}
            placeholder="Enter your password..."
            secureTextEntry={true}
            style={
              Object {
                "color": "#0F0F0F",
                "flex": 2,
                "fontSize": 18,
                "lineHeight": 23,
                "paddingLeft": 5,
                "paddingRight": 5,
              }
            }
            value="password"
          />
        </View>
      </View>
      <View
        style={
          Object {
            "backgroundColor": "#fff",
            "borderBottomWidth": 1,
            "borderColor": "#ddd",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "padding": 5,
            "position": "relative",
          }
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#48BBEC",
              "borderColor": "#48BBEC",
              "borderRadius": 5,
              "borderWidth": 1,
              "flex": 1,
              "height": 60,
              "justifyContent": "center",
              "marginLeft": 5,
              "marginRight": 5,
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "alignSelf": "center",
                "color": "#fff",
                "fontSize": 16,
                "fontWeight": "600",
                "paddingBottom": 5,
                "paddingTop": 5,
              }
            }
          >
             Login 
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
